manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainapp-svc
spec:
  type: ClusterIP
  selector:
    app: mainapp
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 9936
