manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mainapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mainapp-svc
          servicePort: 4567
