manifests/mainapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapp-dep
  namespace: mainapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainapp
  template:
    metadata:
      labels:
        app: mainapp
    spec:
      containers:
        - name: mainapp-tick
          image: josephshih13/tick
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mainapp-ingress
  namespace: mainapp
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mainapp-svc
          servicePort: 4567
---
apiVersion: v1
kind: Service
metadata:
  name: mainapp-svc
  namespace: mainapp
spec:
  type: ClusterIP
  selector:
    app: mainapp
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 9936
